# websocketDriver

./: Cargo.toml  LICENSE  README.md  setup.py  websocket_driver.py
src/: command.rs  dbus.rs  error.rs  main.rs  websocket.rs
vite-project/: package-lock.json  package.json
vite-project/src/: App.css  App.jsx  index.css
websocketdriver/: __init__.py  websocket_driver.py
